# cpp_projects

./: .gitignore  .project  install_cpp_libs.sh
.kdev4/: cpp_projects.kdev4
hello_boost/src/: .cproject  .project  CMakeLists.txt  check_tuple.cpp  checkfile.cpp  hello_boost.cpp
hello_cgal/cgal/src/: .cproject  .project  CMakeLists.txt  points_and_segment.cpp
hello_cuda/julia_set/: .cproject  .project  CMakeLists.txt  julia_gpu.cu
hello_cuda/particles/: .cproject  .project  CMakeLists.txt
hello_cuda/profile/: .cproject  .project  CMakeLists.txt  profile  profile.cu
hello_glut/src/: .project  CMakeLists.txt  glad.c
hello_opencl/src/: .cproject  .project  CMakeLists.txt  vector_add.cpp
hello_opencv/src/: .cproject  .project  CMakeLists.txt
hello_qt/src/: .cproject  CMakeLists.txt
hello_torch/src/: CMakeLists.txt
hello_torch_cpu/src/: CMakeLists.txt
hello_torch_cuda/src/: .project  CMakeLists.txt
high_performance_bioinformatics/: build.sh
high_performance_bioinformatics/genome/src/: .project  CMakeLists.txt  k_mer.cpp  k_mer.h  parallel.cu  parallel.cuh  parse_genome.cpp  parse_genome.h  seq_io.cpp  seq_io.h
high_performance_bioinformatics/src/: .project  CMakeLists.txt  find_kmers.cpp  main.cpp  test_cuda.cu  test_cuda_lib.cpp  test_str_cuda.cu
primes/src/: CMakeLists.txt  parallel_primes.cu  parallel_primes.cuh  primes.cpp  primes.h
primes/test/: test_lib.cpp
